# smartTradeUST

./: .gitattributes  .gitignore  DEPLOYMENT.md  MIGRATION_CHECKLIST.md  README.md  cloudflared-config.yml  config-updated.yml  docker-compose.yml  tunnel-config-fixed.yml
pythonAPI/: .dockerignore  Dockerfile  README.mdclear  Trade Surveillance Architecture Design.docx  bkp_assets_csv_engine.py  bkpcode_ml_pumpdump.txt  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.bat  start.sh
pythonAPI/app/: main.py
pythonAPI/app/api/endpoints/: insiderTrading_calibaration.py  pumpdump_calibaration.py  pumpdump_ml_engine.py  read_latest_pumpdump_insider_data.py  simulate_data_sgx.py  static_template_report.py
pythonAPI/app/core/: paths.py
pythonAPI/data/templates/: reports.docx
smartTradeAngularUI/: .dockerignore  Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json  server-prod.js  tsconfig.json  vite.config.js
smartTradeAngularUI/src/: .eslintrc.json  index.html  main.server.ts  main.ts  styles.css  tailwind.css
smartTradeAngularUI/src/app/: app-config.module.ts  app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts  icons.module.ts  nav-links.ts
smartTradeAngularUI/src/app/advanced-analytics/: advanced-analytics.component.css  advanced-analytics.component.html  advanced-analytics.component.ts  response_1753406408434.json
smartTradeAngularUI/src/environments/: environment.development.ts  environment.prod.ts  environment.ts
(+85 files in other folders)
