[project]
name = "pythonAPI"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pandas==2.2.2",
  "numpy==2.1.1",
  "pyarrow==17.0.0",
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
  "reportlab==4.2.2"
]

[tool.uvicorn]
factory = false
